--- a/.github/workflows/dump.yml
+++ b/.github/workflows/dump.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 env:
-  DUMP_URL: "https://dl.google.com/dl/android/aosp/redfin-up1a.231105.001.b2-factory-4e5a2679.zip" # Direct url to a recovery zip
+  DUMP_URL: "https://bn.d.miui.com/V14.0.20.0.TMACNXM/miui_ISHTAR_V14.0.20.0.TMACNXM_9e97b9003b_13.0.zip" # Direct url to a recovery zip
 
 jobs:
   dump:
