--- a/.github/workflows/dump.yml
+++ b/.github/workflows/dump.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 env:
-  DUMP_URL: "https://bn.d.miui.com/V14.0.20.0.TMACNXM/miui_ISHTAR_V14.0.20.0.TMACNXM_9e97b9003b_13.0.zip" # Direct url to a recovery zip
+  DUMP_URL: "https://download.mifirmpremium.cloud/4e66e694a90e4ba68c411c229863f5ddN5ri_60Je8MAPAeyGQiAy5-DDlmh6S7XuSrr70K4GTnshps3Zv6MgIdfA05LMA_iEhzzACt0RAZcucOSs3T_tpOXu8RgG4QED1V5KpZSpdP2ll0jCxRXw9hXIJiJejNf2Mx3WS9dTsPLNGdBe4BeDsynPGo_R6nmrr6fuNHBF4GAtDsY47-Y7FG77xh9V2rpoL7wO32DAUe89YLAeqr4txFfGvWKiViClAQGam0sQVfsiFW0hXrB6UNMVQCbLvtIfUjwkPydnwLdb-4lWcTCBeFXemfRe_5BHfO0EUa749LTbTn3PyMZR0eQuZ6yBjM0wlf8M5Tgn-51UHJ56WeZ9sivLsZsljp36I-syA4-rrehezgH2oAxZpmi85V7SQ-76rPHBJ9XVGSqvUrwgVZaF5lZ0OSgNykJa4nEFSVPXpEQZOi4cYv_ZjHhrF0m7AIF3tvW5P_TTXHSTcY4csO86VhcThNETveQCSSdvhWOMa8Opfbsp_-vS8LfaejmR3wdT3-EW49EZfBOlJFdXealMtxPVGxcMuFhk0LTV_Y4E8xbq4v7VObBdR4z0G_r-3INPjk-u4qxtt6XFytv_QqVx5gDT2obr3fj5jxWGjls4F1krzs84gq7uHaJ3CTWBsJitd5rxBvueBzwl7jjsPQFuDQgyZSlVIdLPC6dXJ9qOZzdTLAIPHBKzyUNIqq2lbHjHHVqYkdVBdQHxYr3jZAQQU6r78eVejo_7MTgsFC9rhFjk9Z0qedFUWjCbx2LcOjBkduawYaEoXzL24Ie4r3UGWRfcxJo4ElkvVMC1JYdmieO2kBDBOoNMhWx3t6LHK_i5ZE1O74jGjTM0D-vIISFqF7DD2_PthaQFtp30FVvSsVbxFQNV2zMK9GAYGxSB4jBLAffjMJz6UJGAwXPZpczBkJzpa3jOBmtriBUynfW2fnlgy1-6rMSWBqJJQ-ZVWvwN-l2Tfwv__GkdKIbHtB0Srm67RLrV0oBpfmXp5isghbybPm2CkF032WnVJqGUQhGnQYUZfm7aUltVgZQXDN9lWAINFk0sh2tM4BDE9GDLaFMPTSMG6vKSUUFMQAkaXQMRNM8Gcy47MM-XCKiMfgbGg?file_name=miui_ISHTAR_V14.0.20.0.TMACNXM_9e97b9003b_13.0.zip" # Direct url to a recovery zip
 
 jobs:
   dump:
