--- a/.github/workflows/dump.yml
+++ b/.github/workflows/dump.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 env:
-  DUMP_URL: "https://download.mifirmpremium.cloud/6a08bf52783ec9f52593e6dab2ccace5LGY0eHUIUTU6SPNEY9ZNGJH-l-6S8KrVo5QO6ETIW2rq5jaE8uFW4H8DrQE8EF66rfcBpSieNMkE8OkBzOgdCCXzSiCUqqLUt9MDPbi0yHLCrHAD7nYdyTZB5S04xWuOBb2Vh7WonY64lP65VZwJX39IlhvPzP3mkV13_C6OBDccV9vVVCiGhSWgVdd_ArN7iRSDAR94zmijzWX0k2sLcE0XAb-Ta_SHffXnTp57ZYanMy4djKGVbpJZF0Xrz7eD5zqzSI9jG-afK0zmoeLaULaI1nKFu_Zq9gaYvRFCZst9aVVoQ-rQ5bVtN272l7QkhkeCgfDOVV542bkPoB2T3JUgSoaPYPFbDfSFDhfSHoOG7IBZSu3_imZwBQlUECmPYG_TDV2iKFalQLuwU7OxYSJN1H0kRwBw35aCZGmSjcU7nLYhPJoaNiwlQoxoPbgj5PwPsmUq4ypzBO6ILKdhPtbocv1iM6CDGZYAZ_MmTACBwgcL356WbgISEVVtG5eJudl6y5jjjfFYDnOoQAqfPmeZL1ccKSDxNCGtv-5kDzTSBpFNBcdJDqVCrSbPZwRNNm8KFfkcRDSNBj76z435HwX_Udh-S5NG_kbEVvnvKauDLG5IbDjyhMDOpXkEBfO9EZFxsNaK6ZMEM5LbjbtaBL9CeXmJxfTssrTYRhNOl9LmcikwMC3fCYVq3RZ4K2aF_G0whIFaeXWCh5nCbzr5fQJxVlqoCTt4qlFNAXLxC6O9439gX0LKb8OqBszDfexxL8uMWbosmrgC2dUColCgGKsyOnEXnTeZF-CdKzMJbUwLBRjItsCEvfihB3q4WLZTB-68TCPf-rCg8HOpGCjc21AgbvVdLNGpNtYmGgNRjIFJKk0_4zRl2SR5Pb6YH4ilV8Dt-jkTFG_xEoai1GwbyCiN_Yvf3ypfmKdp5KGYhdeVc830mDXgf76_pRv8naVFbEuLAnkFLcmDA7Ht5ArrP7cDPIwe4x4Rlyw1sUHtHugGgGwAcEwImXT8dSG0IdKHTYvKvPis73Bmt05p2kR_uuG65BmsPNsvg8a8P6LdNgK1FSC8ZsHHbbFpABJHkkjumO8N5-R_RJUYQfQSEP58_g?file_name=miui_ISHTARGlobal_V14.0.3.0.TMAMIXM_3c0ba60c9e_13.0.zip" # Direct url to a recovery zip
+  DUMP_URL: "https://bn.d.miui.com/V14.0.3.0.TMAMIXM/miui_ISHTARGlobal_V14.0.3.0.TMAMIXM_3c0ba60c9e_13.0.zip" # Direct url to a recovery zip
 
 jobs:
   dump:
