--- a/.github/workflows/dump.yml
+++ b/.github/workflows/dump.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+  workflow_dispatch:
 
 env:
   DUMP_URL: "https://bn.d.miui.com/V14.0.3.0.TMAMIXM/miui_ISHTARGlobal_V14.0.3.0.TMAMIXM_3c0ba60c9e_13.0.zip" # Direct url to a recovery zip
